--- a/.github/workflows/run-populate-db.yml
+++ b/.github/workflows/run-populate-db.yml
@@ -31,5 +31,8 @@ jobs:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
           wiki_key: ${{ secrets.wiki_key }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          reddit_client_id: ${{ secrets.REDDIT_CLIENT_ID }}
+          reddit_client_secret: ${{ secrets.REDDIT_CLIENT_SECRET }}
+          reddit_user_agent: ${{ secrets.REDDIT_USER_AGENT }}
           
 
