--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.10.4",
+    "mongodb": "^6.15.0",
     "next": "15.1.5",
+    "pg": "^8.14.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
